add header main structure 2

--- a/index.html
+++ b/index.html
@@ -5,8 +5,74 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Luxury restaurant/title>
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
+	<header id="header" class="header">
+		<div class="main-header">
+			<div class="container">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-3">
+							<img src="img/logo.png" alt="Luxury restaurant">
+						</div>
+						<div class="col-lg-6">
+							<nav>
+								<ul class="menu">
+									<li class="menu__item">
+										<a href="#">Home</a>
+									</li>
+									<li class="menu__item">
+										<a href="#">Menu</a>
+									</li>
+									<li class="menu__item">
+										<a href="#">reservation</a>
+									</li>
+									<li class="menu__item">
+										<a href="#">recipe</a>
+									</li>
+									<li class="menu__item">
+										<a href="#">blog</a>
+									</li>
+									<li class="menu__item">
+										<a href="#">pages</a>
+									</li>
+									<li class="menu__item">
+										<a href="#">contact</a>
+									</li>
+								</ul>
+							</nav>
+						</div>
+						<div class="col-lg-3">
+							<button class="book">
+								<span "book__icon">Book your table</span>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="offer">
 
+		</div>
+	</header>
+	<section id="call" class="call">
+		<div class="container">
+
+		</div>
+	</section>
+
+	<section id="about" class="about">
+		<div class="container">
+
+		</div>
+	</section>
+
+	<section id="special" class="special">
+		<div class="container">
+
+		</div>
+	</section>
 </body>
 </html>
